infrastructure/Kubernetes/network_policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-services
spec:
  podSelector: {} # Apply to all pods
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress-nginx-controller
    - podSelector:
        matchLabels:
          app: restapiservice
    - podSelector:
        matchLabels:
          app: webserver
