infrastructure/Kubernetes/network_policy/restapi-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: restapi-allow-labeled
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: restapiservice
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: development
    - podSelector:
        matchLabels:
          app: ingress-nginx
          name: ingress-nginx
