infrastructure/Kubernetes/network_policy/webserver-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: webserver-allow-labeled
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: webserver
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: development
    - podSelector:
        matchLabels:
          app: ingress-nginx
  egress:
  - {}
